# llm_data_scientist

./: README.md  main.py  requirements.txt  tobin.py
Bash/: start_vllm_server.sh
a_mcp_versions/: config.py  prompts.py  start_vllm_server.sh  temp_agent.py  temp_config.py  temp_mcp_client.py
docs_for_run/: run_steps
reinforcement_learning_notes/: gpt_phases_guidelines.md  rl_pointers.md
smol_server/: main.py  pyproject.toml  requirements.txt
smol_server/docs_for_refactoring/: Sentiment2D.py  SentimentSuite.py
smol_server/docs_not_for_use/: DAVID BARNES DA301_Assignment_Python Final.ipynb  project_structure
smol_server/general_docs/: add_in_second_task  chunk_flow
smol_server/src/: __init__.py  config.py
smol_server/src/client/: __init__.py  agent.py  llm.py  mcp_client.py
smol_server/src/client/ui/: chat.py
smol_server/src/data/: turtle_sales.csv  turtle_sales.parquet
smol_server/src/data/metadata/: metadata_suggestions.md  task_2_metadata  turtle_games_dataset_metadata.md
smol_server/src/utils/: create_db_tables.py  parquet _to_sqlite.py  prompts.py  tool_scaffold.py
smol_server/tools/: analysis_tools.py  data_structure_feature_engineering_tools.py  data_structure_inspection_tools.py  database_tools.py
smol_server/useful_docs/smolagents_lib__tools/: data_basics.py  feature_engineering.py
src/: __init__.py  config.py  shared_state.py
src/client/: __init__.py  agent.py  config.py  llm.py  mcp_client.py  telemetry.py
src/data/: requirements.txt  tg_database.db  turtle_reviews.parquet  validate_schema.py
src/states/: agent_step_log.jsonl
src/utils/: __init__.py  generate_parquet.py  metadata_embedder.py  ollama_utils.py  prompts.py  start_vllm_server.sh  validate_schema.py  (+1 more)
tests/: test_databaseconnect.py
tools/: __init__.py  data_structure_feature_engineering_tools.py  data_structure_inspection_tools.py  database_tools.py  dataframe_manipulation_tools.py  dataframe_storage.py  dataframe_tools.py  documentation_tools.py  help_tools.py
(+3 files in other folders)
