[project]
name = "smol-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "e2b-code-interpreter>=1.5.1",
    "ipywidgets>=8.1.7",
    "panda-pie>=0.1.1",
    "pandas-stubs==2.2.3.250527",
    "requests>=2.32.4",
    "smolagents[telemetry,toolkit]>=1.18.0",
    "sqlalchemy>=2.0.41",
]
