[project]
name = "smol-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "e2b-code-interpreter>=1.5.1",
    "ipywidgets>=8.1.7",
    "llama-index>=0.12.43",
    "openinference-instrumentation-smolagents>=0.1.13",
    "opentelemetry-exporter-otlp>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "panda-pie>=0.1.1",
    "pandas-stubs==2.2.3.250527",
    "requests>=2.32.4",
    "smolagents[telemetry,toolkit]>=1.18.0",
    "sqlalchemy>=2.0.41",
    "opentelemetry-sdk>=0.1",
    "opentelemetry-exporter-otlp>=0.1",
    "openinference-instrumentation-smolagents>=0.1",
    "gradio>=5.34.2",
]
