[project]
name = "smol-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "e2b-code-interpreter>=1.5.1",
    "ipywidgets>=8.1.7",
    "openinference-instrumentation-smolagents>=0.1.13",
    "opentelemetry-exporter-otlp>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "panda-pie>=0.1.1",
    "pandas-stubs==2.2.3.250527",
    "requests>=2.32.4",
    "smolagents[e2b,telemetry,toolkit]>=1.18.0",
    "sqlalchemy>=2.0.41",
    "opentelemetry-sdk>=0.1",
    "opentelemetry-exporter-otlp>=0.1",
    "openinference-instrumentation-smolagents>=0.1",
    "gradio>=5.34.2",
    "faiss-gpu>=v1.7.2",
    "sse-starlette>=2.3.6",
    "langfuse>=3.0.4",
    "langchain-community>=0.3.26",
]
